--- a/print.html
+++ b/print.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="numerical/isqrt.html"><strong aria-hidden="true">6.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="numerical/linrec/intro.html"><strong aria-hidden="true">7.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="numerical/linrec/berlekamp.html"><strong aria-hidden="true">7.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="numerical/linrec/kitamasa.html"><strong aria-hidden="true">7.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="numerical/linrec/bostanmori.html"><strong aria-hidden="true">7.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="datastructure/matrix.html"><strong aria-hidden="true">8.</strong> Fast n-dimensional Array</a></li><li class="chapter-item expanded "><a href="datastructure/bitarray.html"><strong aria-hidden="true">9.</strong> Bitset</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/intro.html"><strong aria-hidden="true">10.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="datastructure/segtree/segtree.html"><strong aria-hidden="true">10.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/fenwick.html"><strong aria-hidden="true">10.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/lazyseg.html"><strong aria-hidden="true">10.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><a href="datastructure/rope.html"><strong aria-hidden="true">11.</strong> Rope</a></li><li class="chapter-item expanded affix "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="graphs/adjlist.html"><strong aria-hidden="true">12.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="graphs/dijkstra.html"><strong aria-hidden="true">13.</strong> Dijkstra</a></li><li class="chapter-item expanded "><a href="graphs/dsu.html"><strong aria-hidden="true">14.</strong> Disjoint Set Union</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="graphs/wdsu.html"><strong aria-hidden="true">14.1.</strong> Weighted DSU</a></li></ol></li><li class="chapter-item expanded "><a href="graphs/scc.html"><strong aria-hidden="true">15.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="graphs/2sat.html"><strong aria-hidden="true">16.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="strings/kmp.html"><strong aria-hidden="true">17.</strong> KMP</a></li><li class="chapter-item expanded "><a href="strings/manacher.html"><strong aria-hidden="true">18.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="strings/salcp.html"><strong aria-hidden="true">19.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="geometry/convexhull.html"><strong aria-hidden="true">20.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="unclass/valcomp.html"><strong aria-hidden="true">21.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="unclass/lis.html"><strong aria-hidden="true">22.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="unclass/mos.html"><strong aria-hidden="true">23.</strong> Mo's</a></li><li class="chapter-item expanded "><a href="unclass/bigint.html"><strong aria-hidden="true">24.</strong> Arbitrary-Precision Integer</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="misc/fastio.html"><strong aria-hidden="true">25.</strong> Fast IO</a></li><li class="chapter-item expanded "><a href="misc/macro.html"><strong aria-hidden="true">26.</strong> Macros</a></li><li class="chapter-item expanded "><a href="misc/zero_one_trait.html"><strong aria-hidden="true">27.</strong> Zero/One Trait (Deprecated)</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="numerical/isqrt.html"><strong aria-hidden="true">6.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="numerical/sieve.html"><strong aria-hidden="true">7.</strong> Sieve</a></li><li class="chapter-item expanded "><a href="numerical/linrec/intro.html"><strong aria-hidden="true">8.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="numerical/linrec/berlekamp.html"><strong aria-hidden="true">8.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="numerical/linrec/kitamasa.html"><strong aria-hidden="true">8.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="numerical/linrec/bostanmori.html"><strong aria-hidden="true">8.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="datastructure/matrix.html"><strong aria-hidden="true">9.</strong> Fast n-dimensional Array</a></li><li class="chapter-item expanded "><a href="datastructure/bitarray.html"><strong aria-hidden="true">10.</strong> Bitset</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/intro.html"><strong aria-hidden="true">11.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="datastructure/segtree/segtree.html"><strong aria-hidden="true">11.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/fenwick.html"><strong aria-hidden="true">11.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/lazyseg.html"><strong aria-hidden="true">11.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><a href="datastructure/rope.html"><strong aria-hidden="true">12.</strong> Rope</a></li><li class="chapter-item expanded affix "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="graphs/adjlist.html"><strong aria-hidden="true">13.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="graphs/dijkstra.html"><strong aria-hidden="true">14.</strong> Dijkstra</a></li><li class="chapter-item expanded "><a href="graphs/dsu.html"><strong aria-hidden="true">15.</strong> Disjoint Set Union</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="graphs/wdsu.html"><strong aria-hidden="true">15.1.</strong> Weighted DSU</a></li></ol></li><li class="chapter-item expanded "><a href="graphs/scc.html"><strong aria-hidden="true">16.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="graphs/2sat.html"><strong aria-hidden="true">17.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="strings/kmp.html"><strong aria-hidden="true">18.</strong> KMP</a></li><li class="chapter-item expanded "><a href="strings/manacher.html"><strong aria-hidden="true">19.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="strings/salcp.html"><strong aria-hidden="true">20.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="geometry/convexhull.html"><strong aria-hidden="true">21.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="unclass/valcomp.html"><strong aria-hidden="true">22.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="unclass/lis.html"><strong aria-hidden="true">23.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="unclass/mos.html"><strong aria-hidden="true">24.</strong> Mo's</a></li><li class="chapter-item expanded "><a href="unclass/bigint.html"><strong aria-hidden="true">25.</strong> Arbitrary-Precision Integer</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="misc/fastio.html"><strong aria-hidden="true">26.</strong> Fast IO</a></li><li class="chapter-item expanded "><a href="misc/macro.html"><strong aria-hidden="true">27.</strong> Macros</a></li><li class="chapter-item expanded "><a href="misc/zero_one_trait.html"><strong aria-hidden="true">28.</strong> Zero/One Trait (Deprecated)</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -1015,6 +1015,63 @@ where
     } else {
         s
     }
+}</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="sieve"><a class="header" href="#sieve">Sieve</a></h1>
+<p>Linear sieve can find primes below \(N\) in \(O(N)\) time. With searching for primes, it can also calculate values of multiplicative functions for values below \(N\) in linear time.</p>
+<h2 id="finding-primes"><a class="header" href="#finding-primes">Finding primes</a></h2>
+<pre><code class="language-rust noplayground">fn sieve(max_val: usize) -&gt; (Vec&lt;bool&gt;, Vec&lt;usize&gt;) {
+    let mut primes = vec![];
+    let mut is_prime = vec![true; max_val + 1];
+    is_prime[0] = false;
+    is_prime[1] = false;
+
+    for i in 2..=max_val {
+        if is_prime[i] {
+            primes.push(i);
+        }
+        for &amp;p in primes.iter() {
+            let v = i * p;
+            if v &gt; max_val {
+                break;
+            }
+            is_prime[v] = false;
+            if i % p == 0 {
+                break;
+            }
+        }
+    }
+
+    (is_prime, primes)
+}</code></pre>
+<h2 id="with-euler-phi-function"><a class="header" href="#with-euler-phi-function">With Euler Phi Function</a></h2>
+<pre><code class="language-rust noplayground">fn phi_sieve(max_val: usize) -&gt; (Vec&lt;bool&gt;, Vec&lt;usize&gt;, Vec&lt;usize&gt;) {
+    let mut primes = vec![];
+    let mut is_prime = vec![true; max_val + 1];
+    is_prime[0] = false;
+    is_prime[1] = false;
+    let mut phi = vec![0; max_val + 1];
+
+    for i in 2..=max_val {
+        if is_prime[i] {
+            primes.push(i);
+            phi[i] = i - 1;
+        }
+        for &amp;p in primes.iter() {
+            let v = i * p;
+            if v &gt; max_val {
+                break;
+            }
+            is_prime[v] = false;
+            if i % p == 0 {
+                phi[v] = phi[i] * p;
+                break;
+            } else {
+                phi[v] = phi[i] * phi[p]
+            }
+        }
+    }
+
+    (is_prime, phi, primes)
 }</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="linear-recurrence"><a class="header" href="#linear-recurrence">Linear Recurrence</a></h1>
 <p>Algorithms related to linear recurrences</p>
